--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "set NODE_ENV=development & webpack-dev-server --open --hot"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@alicloud/sms-sdk": "^1.0.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -23,6 +25,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
+    "weui": "^1.1.2"
   }
 }
