--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "node-sass": "^4.5.3",
     "express": "^4.16.2",
     "http": "0.0.0",
     "jquery": "^3.2.1",
+    "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
@@ -30,8 +30,12 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3",
     "weui": "^1.1.2"
+  },
+  "dependencies": {
+    "file-loader": "^1.1.5"
   }
 }
